# Microservices

./: README.md
Fast API/FastApi-Crash-Course/: pyproject.toml
Fast API/FastApi-Crash-Course/Database/: db_setup.py
Fast API/FastApi-Crash-Course/Database/models/: course.py  mixins.py  user.py
Fast API/FastApi-Crash-Course/api/: courses.py  sections.py  users.py
Fast API/FastApi-Crash-Course/fastapi_crash_course/: main.py
Fast API/postgressql and pgadmin setup/: pg admin error resoleve.md
Poetry/: poetry-Steps.md  working-on-poetry.md
Poetry/project_1/: pyproject.toml
Todos App/: compose.yaml
Todos App/frontend/: Dockerfile.dev  pyproject.toml
Todos App/frontend/frontend/: main.py
Todos App/todo/app/: main.py
